--- a/main_keyvault.yml
+++ b/main_keyvault.yml
@@ -46,13 +46,13 @@ jobs:
     - name: Authenticate Azure CLI
       run: az login
 
-    - uses: azure/CLI@v1
-      with: 
-        inlineScript: |
-          value1=$(az keyvault secret show --name $AZURE_SECRET_NAME --vault-name $AZURE_KEYVAULT_NAME --query value -o tsv)
-          echo $value1
-          value2=$(az keyvault secret show --name $AZURE_SECRET_NAME --vault-name $AZURE_KEYVAULT_NAME --query value)
-          echo $value2
-          #echo "::add-mask::$value"
+    # - uses: azure/CLI@v1
+    #   with: 
+    #     inlineScript: |
+    #       value1=$(az keyvault secret show --name $AZURE_SECRET_NAME --vault-name $AZURE_KEYVAULT_NAME --query value -o tsv)
+    #       echo $value1
+    #       value2=$(az keyvault secret show --name $AZURE_SECRET_NAME --vault-name $AZURE_KEYVAULT_NAME --query value)
+    #       echo $value2
+    #       #echo "::add-mask::$value"
           #printf "%s\n" $value >> GITHUB_OUTPUT
           echo "${value2//\"}" >> GITHUB_OUTPUT 
